# PLI5

./: .gitignore  Makefile  package-lock.json  package.json
backend/: pyproject.toml
backend/src/pli5/: main.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: PDFViewer.vue  PLI5Button.vue
frontend/src/services/: HomeService.ts
frontend/src/views/: HomeView.vue
src/components/: FileUploader.vue
